--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "0.6.3",
+        "inertiajs/inertia-laravel": "^0.6.5",
         "laravel/fortify": "1.13.1",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
@@ -21,7 +21,7 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
+        "phpunit/phpunit": "^9.6.10",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
